Version 1.3.0 - 2025-01-28

     Features:

   - feat: Define `org-remark-report-no-highlights`
     krisbalintona/chatty-no-highlights (#86) by Kristoffer Balintona

   - Ability to highlight a whole line and show a mark on the margin (#71)

   - Option to delete the whole notes entry when highlight is removed if
     there is no notes body text (#21)

   - `org-remark-open` to open the associated marginal notes file if
     cursor outside a highlight (#72)

     Fixes:

   - fix: crash when highlighting non-org source and org-remark-use-org-id is
          true (#95)

   - fix: org-remark-info-mode interfering with isearch-forward (#93)

   - fix: fix: args-out-of-range error during loading highlights (#89)

   - fix: `org-remark-link` gets wrongly referenced (#83)

   - fix: josephmturner/fixes (#87): typo in package description

   - fix: compiler warning ‘org-remark-highlight-save’ is an obsolete...

   - fix: Highlights overlay can get added to unsupported buffer (ef98c27)

   - fix(highlights-delay-load): rm window-state-change-functions (#82)

Version 1.2.2 - 2024-03-25

  - fix: program error #78 mapconcat's 3rd arg is not optional in Emacs 28

Version 1.2.1 - 2023-08-20

  - fix: org-remark-icon-mode is a void symbol

Version 1.2.0 - 2023-08-20

  - feat(info): Org-remark supports Info

          + Advice has been implemented. It is added and removed by
            `org-remark-info-mode`.

          + No suitable hook is avaialble to trigger a function after the Info node
            is rendered. This is necessary as Info renders a new node in the same
            buffer (in the same way as Nov.el does).

  - feat: icons for additional information for highlights

          + Notes exists for the highlight (*)

          + The highlight position auto-adjusted (d)

          + Uses the new `org-remark-highlights-after-load-functions'

          + Icons are customizable. You can also disable icons by setting